tests/e2e/snapshots/test__e2e__offline__moonup_default.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - default
    - latest
---
success: true
exit_code: 0
----- stdout -----
✔ Default toolchain set to version 'latest'

----- stderr -----
