tests/e2e/snapshots/test__e2e__offline__moonup_default_help_fallback.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - default
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Please provide a toolchain version to set as default
