tests/e2e/snapshots/test__e2e__offline__moonup_pin.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - pin
    - nightly
---
success: true
exit_code: 0
----- stdout -----
✔ Pinned toolchain to version 'nightly'
Toolchain file: [TEMP_FILE]

----- stderr -----
