tests/e2e/snapshots/test__e2e__offline__moonup_pin_help_fallback.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - pin
---
success: false
exit_code: 2
----- stdout -----
Pin the MoonBit toolchain to a specific version

Usage: moonup [TOOLCHAIN]

Arguments:
  [TOOLCHAIN]  Toolchain version tag or channel name [latest, nightly, bleeding]

Options:
  -h, --help  Print help

----- stderr -----
