tests/e2e/snapshots/test__e2e__offline__moonup_run_not_installed.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - run
    - nightly
    - moon
    - "--help"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
  × Failed to build command: Toolchain 'nightly' is not installed
