tests/e2e/snapshots/test__e2e__offline__moonup_show.snap
---
source: tests/e2e/offline.rs
info:
  program: moonup
  args:
    - show
---
success: true
exit_code: 0
----- stdout -----
Moonup home: [MOONUP_HOME]

No toolchains installed

----- stderr -----
